Fix/rodar no cefet (#8)
* Update README.md

O Gradle estava exigindo a versão do Java 17 ou superior para buildar o programa, então especifiquei isso no README

* Update FirstScreen.java

Pequenas alterações que fazem o jogo rodar no JDK 17